[project]
name = "materials-science-mcp"
version = "1.0.0"
description = "Materials Science MCP Server with RAG and LLM fallback"
authors = [
    {name = "Materials Science Team"}
]
dependencies = [
    "fastmcp>=0.2.0",
    "playwright>=1.40.0",
    "litellm>=1.50.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=0.8.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["materials_science_qa_mcp"]

[tool.uv]
dev-dependencies = []
